src/compiletest/tlcell-11.stderr
error[E0277]: `*const main::Marker` cannot be shared between threads safely
 --> $DIR/tlcell-11.rs:8:5
  |
7 |     fn is_sync<T: Sync>() {}
  |        -------    ---- required by this bound in `main::is_sync`
8 |     is_sync::<TLCellOwner<Marker>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const main::Marker` cannot be shared between threads safely
  |
  = help: within `qcell::TLCellOwner<main::Marker>`, the trait `std::marker::Sync` is not implemented for `*const main::Marker`
  = note: required because it appears within the type `std::marker::PhantomData<*const main::Marker>`
  = note: required because it appears within the type `qcell::TLCellOwner<main::Marker>`
